# xurl

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust-ci.yml
scripts/: prepare_cargo_release.py  stage_pypi_packages.py
skills/xurl/: SKILL.md
xurl-cli/: Cargo.toml
xurl-cli/src/: main.rs
xurl-cli/tests/: cli.rs
xurl-core/: Cargo.toml
xurl-core/src/: error.rs  lib.rs  model.rs  render.rs  service.rs  uri.rs
xurl-core/src/provider/: mod.rs  openclaw.rs  test-openclaw-cli.ps1
