[workspace]
members = ["xurl-core", "xurl-cli"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/xurl"
homepage = "https://github.com/Xuanwo/xurl"
rust-version = "1.85"

[workspace.dependencies]
xurl-core = { version = "=0.0.0-dev", path = "xurl-core" }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
