[package]
name = "xurl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI for reading and writing AI agent URLs"
documentation = "https://docs.rs/xurl-cli"
readme = "../README.md"
keywords = ["agent", "url", "cli", "codex", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "xurl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
xurl-core = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23.0"
